# ReADOFAIMacro

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  readme.md
include/: ADOFAIMacroDef.h  Controller.h  InputEvent.h  Level.h  PlayScript.h  Range.h  WinAPIController.h
src/: Level.cpp  Main.cpp  PlayScript.cpp  WinAPIController.cpp
